# shorui-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inspect_limiter.py  pyproject.toml  sample_transcript.txt  sample_transcript_1.txt  test_final.txt  verify_dummy.py  verify_manual.py
agents/react_agent/: __init__.py  agent.py  default_tools.py  example.py  hipaa_report_example.py  shorui_example.py  state.py  test_agent.py  workflow.py
agents/react_agent/core/: __init__.py  base_state.py  memory.py  model_factory.py  models.py  prompts.py  tools.py
agents/react_agent/infrastructure/: __init__.py  http_clients.py
agents/react_agent/tests/: test_clients.py
agents/react_agent/tools/: __init__.py  clinical_transcript.py  compliance_tools.py  document_tools.py  rag_retrieval.py  retrieval_tools.py  system_tools.py
app/: __init__.py  main.py
app/agent/: __init__.py  async_service.py  routes.py  schemas.py  service.py
app/agent/execution/: __init__.py  base.py
app/agent/routing/: types.py
app/agent/session/: __init__.py  manager.py  storage.py  types.py
app/auth/: __init__.py  routes.py
app/compliance/: __init__.py  factory.py  protocols.py  routes.py  schemas.py
app/compliance/services/: __init__.py  audit_service.py  compliance_report_service.py  context_optimizer.py  hipaa_graph_ingestion.py  hipaa_regulation_service.py  orchestrator.py  phi_detector.py  privacy_extraction.py  regulation_retriever.py  report_repository.py  transcript_repository.py
app/ingestion/: routes.py  schemas.py
app/ingestion/routes/: __init__.py  documents.py  regulations.py  transcripts.py
app/ingestion/services/: __init__.py  chunking.py  cleanup.py  context_optimizer.py  document_ingestion_service.py  embedding.py  indexing.py  job_ledger.py  local_storage.py  orchestrator.py  pipeline.py  storage.py  storage_protocol.py  tenant.py
app/rag/: factory.py  protocols.py  routes.py
app/rag/domain/: __init__.py  grounding.py
app/rag/services/: __init__.py  graph_retriever.py  grounded_generator.py  inference.py  query_processor.py  reranker.py  retrieval.py
app/scripts/: run_evals.py  test_integration.py
app/workers/: celery_app.py  decorators.py  tasks.py  transcript_tasks.py
db/: init-db.sql
evals/data/: sample.jsonl
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: agentApi.ts  authApi.ts
frontend/src/components/: AgentChatView.tsx  InputForm.tsx  ProtectedRoute.tsx  WelcomeScreen.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Login.tsx  (+1 more)
monitoring/: prometheus.yml
scripts/: cleanup_raw_uploads.py  e2e_test.py  extract_safe_harbor.py
shorui_core/: __init__.py  config.py  logging.py
shorui_core/artifacts/: __init__.py  artifact_service.py  job_types.py  models.py
shorui_core/auth/: __init__.py  api_key_service.py  dependencies.py  exceptions.py  jwt_service.py  middleware.py  user_service.py
shorui_core/domain/: __init__.py  auth.py  exceptions.py  hipaa_schemas.py  interfaces.py
shorui_core/evals/: base.py  evaluators.py
shorui_core/infrastructure/: __init__.py  embeddings.py  minio.py  neo4j.py  openai_client.py  postgres.py  qdrant.py  rate_limiter.py  telemetry.py
shorui_core/runtime/: __init__.py  context.py  errors.py  http_client.py  retry.py
specs/: README.md  agents.md  artifacts_and_jobs_impl.md  audit_ledger_impl.md  auth_tenant_isolation_impl.md  compliance.md  compliance_report_artifacts_impl.md  component_artifacts_and_jobs.md  component_audit_ledger.md  component_auth_tenant_isolation.md  component_compliance_report_artifacts.md  component_eval_harness.md  component_grounded_rag_contract.md  component_observability_and_evals.md  component_pointer_based_ingestion.md  component_service_runtime.md  component_user_auth.md  grounded_rag_contract_impl.md  ingestion.md  north_star_architecture.md  observability_and_evals_impl.md  pointer_based_ingestion_impl.md  production_hardening.md  rag.md  service_production_review.md  service_runtime_impl.md  shorui_core.md  user_auth_impl.md  workers.md
tests/: __init__.py
tests/app/: __init__.py  test_main.py
tests/integration/: test_rag_compliance_flow.py
tests/shorui_core/: test_hipaa_schemas.py
(+63 files in other folders)
